--- a/TrelloTestApp/Views/Home/Index.cshtml
+++ b/TrelloTestApp/Views/Home/Index.cshtml
@@ -14,5 +14,10 @@
     <div>
         This is Trello webhook test application
     </div>
+    <div>
+        RawUrl: @Request.RawUrl <br />
+        AbsoluteUri: @Request.Url.AbsoluteUri
+        UserHostAddress: @Request.UserHostAddress
+    </div>
 </body>
 </html>
