--- a/TrelloTestApp/Views/Home/Index.cshtml
+++ b/TrelloTestApp/Views/Home/Index.cshtml
@@ -18,6 +18,7 @@
         RawUrl: @Request.RawUrl <br />
         AbsoluteUri: @Request.Url.AbsoluteUri <br />
         UserHostAddress: @Request.UserHostAddress <br />
+        UserHostName: @Request.UserHostName <br />
         Real url: @Request.ServerVariables["HTTP_X_FORWARDED_FOR"]
     </div>
 </body>
